<resources>
    <string name="app_name">HeyStranger</string>
    <string name="chat_hint">Enter typing...</string>
    <string name="empty_string"></string>
    <string name="hey">Hey,</string>
    <string name="stranger">stranger</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">Username...</string>
    <string name="password">Password...</string>
    <string name="login">login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot password</string>
    <string name="name">Name...</string>
    <string name="password_confirm">Confirm password...</string>
    <string name="birth">Birthday...</string>
    <string name="searching">Searching...</string>
    <string name="seen">Seen</string>
</resources>
