<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_splash"
    tools:context=".fragment.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <RelativeLayout
                android:layout_marginTop="50dp"
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.benjamin.heystranger.customview.CustomTextView
                    android:id="@+id/tvHey"
                    android:paddingLeft="70dp"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_logo_size"
                    android:textColor="@color/white"
                    android:text="@string/hey"
                    android:layout_height="wrap_content"
                    android:paddingStart="70dp" />
                <com.benjamin.heystranger.customview.CustomTextView
                    android:id="@+id/tvStranger"
                    android:paddingRight="70dp"
                    android:gravity="right"
                    android:layout_width="match_parent"
                    android:textSize="@dimen/text_logo_size"
                    android:layout_below="@id/tvHey"
                    android:textColor="@color/white"
                    android:text="@string/stranger"
                    android:layout_height="wrap_content"
                    android:paddingEnd="70dp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_marginTop="70dp"
                android:layout_marginRight="30dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_weight="1"
                    android:id="@+id/edtName"
                    android:background="@drawable/background_chat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:hint="@string/name"
                    android:inputType="text"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="30dp"
                    android:maxLines="3"
                    android:paddingLeft="@dimen/space_extreme"
                    android:paddingTop="15dp"
                    android:paddingRight="@dimen/space_extreme"
                    android:paddingBottom="15dp"
                    android:singleLine="false" />
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imgAvatarRegister"
                    android:layout_width="60dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/select_image"
                    android:layout_height="60dp"/>
            </LinearLayout>

            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/edtUserNameRegister"
                android:background="@drawable/background_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/user_name"
                android:inputType="textEmailAddress"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_extreme"
                android:paddingTop="15dp"
                android:paddingRight="@dimen/space_extreme"
                android:paddingBottom="15dp"
                android:singleLine="false" />

            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/edtPasswordRegister"
                android:background="@drawable/background_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_extreme"
                android:paddingTop="15dp"
                android:paddingRight="@dimen/space_extreme"
                android:paddingBottom="15dp"
                android:singleLine="false" />

            <EditText
                android:layout_marginTop="20dp"
                android:id="@+id/edtPasswordConfirm"
                android:background="@drawable/background_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/password_confirm"
                android:inputType="textPassword"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_extreme"
                android:paddingTop="15dp"
                android:paddingRight="@dimen/space_extreme"
                android:paddingBottom="15dp"
                android:singleLine="false" />

            <EditText
                android:focusable="false"
                android:layout_marginTop="20dp"
                android:id="@+id/edtBirthdayRegister"
                android:background="@drawable/background_chat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:hint="@string/birth"
                android:inputType="text"
                android:layout_marginRight="30dp"
                android:layout_marginLeft="30dp"
                android:maxLines="1"
                android:paddingLeft="@dimen/space_extreme"
                android:paddingTop="15dp"
                android:paddingRight="@dimen/space_extreme"
                android:paddingBottom="15dp"
                android:singleLine="false" />

            <Button
                android:padding="10dp"
                android:layout_marginTop="70dp"
                android:id="@+id/btnRegister"
                android:text="@string/register"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:background="@drawable/background_btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>